<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/ic_backbutton"
        android:contentDescription="@string/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/dummyUserScore"
        android:src="@drawable/ic_star_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/dummyUserScore"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_duration"
        app:layout_constraintStart_toEndOf="@id/img_duration"
        app:layout_constraintTop_toTopOf="@id/img_duration" />

    <TextView
        android:id="@+id/title_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/dummyTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/poster_detail"
        android:layout_width="200dp"
        android:layout_height="245dp"
        android:layout_gravity="end"
        android:layout_marginEnd="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_blackpanther"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_detail"
        app:riv_corner_radius="20dp" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/genre"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_detail" />

    <TextView
        android:id="@+id/genre_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:maxLines="1"
        android:text="@string/dummyGenre"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/genre"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/release_date"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/genre_detail"
        app:layout_constraintTop_toBottomOf="@id/genre_detail" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/dummyDate"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/release_date"
        app:layout_constraintTop_toBottomOf="@id/release_date"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/duration"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@id/date" />

    <TextView
        android:id="@+id/duration_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:maxLines="1"
        android:text="@string/dummyDuration"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/duration"
        app:layout_constraintTop_toBottomOf="@id/duration"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sinopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sinopsis"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/duration_detail"
        app:layout_constraintTop_toBottomOf="@id/duration_detail" />

    <TextView
        android:id="@+id/sinopis_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/dummySinopsis"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/sinopsis"
        app:layout_constraintTop_toBottomOf="@id/sinopsis" />


</androidx.constraintlayout.widget.ConstraintLayout>